@@ -1,5 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mono.snk 596 RMD160 bf19be5a57a300f1f54c8ab0466ec0b8532565f1 SHA1 9667c92d7c9009a6b7baf5815483ea8783d12581 SHA256 44a83944d57c37da4e7872967f1fd4b445af18cdcbe8d17a0e3f5e5ce553c78a
+DIST jay-1.1.1-mono.snk.bz2 785 RMD160 2e30f95781501c734073f377f4b2bd1e04db0409 SHA1 9e32703b6ae86db332c73354fb79dcc61a6b7b17 SHA256 0cc2ca58f90773eafa8460dfb8ff4ac6238b68106eb1631348a800091a6ff3de
 DIST jay-1.1.1.zip 679556 RMD160 22aaa15b61300326c278b79e0b43716fa4c7c826 SHA1 0f534ac5dcb5e59fea07b84d579c4c4e7b695419 SHA256 f4da396c80578653685d287cea1e32669ebdf148cc17eed9ba88e895942bd571
-EBUILD jay-1.1.1-r2.ebuild 1850 RMD160 b5eb00ea11103370552b77b2a4fee3076a098a7d SHA1 98e37d7edb59fe66a26186cffdd665dc2094f0e0 SHA256 e415bcef8b9be1940317086f1217cf1096e1865a348aa4661ca39eb514fd64ab
-MISC ChangeLog 1342 RMD160 ccf29623e48861729b9e1178a7f52bdf8e859147 SHA1 aaa5d0052c115568955ab211163129f444bcbb3c SHA256 92dfa4e63e5abcd7eb13546964a6afab7344e382567611b98f05111679394e76
-MISC metadata.xml 178 RMD160 3643b70f2efc94edc50d135b66fa2eb53ab5e901 SHA1 7434030f83821e9881075128f3553835edc3aa2e SHA256 59719ce7ed2a90bd21c88642451ab1d66f0e9513136845bf1e69dab8368f4f91
+EBUILD jay-1.1.1-r2.ebuild 1762 RMD160 356dd6d3bf3de228f9bbfafab5f7086d59d43856 SHA1 a3001445b8a3cfb107dc8116a582966586674aaa SHA256 0fba371a93afc5dd013f998d31f1ac336d4d070264267428057dbed6651d8ab6
+MISC ChangeLog 1721 RMD160 ae24a95d0b12688f909190c7f4afd6991fc478a8 SHA1 044210367aab42f1574db03785afc6f4026bfa99 SHA256 42b0586645f8f8c8ecec410ba9e5f86d2a2d1b79a8d1cc369382ec00ee62a566
+MISC metadata.xml 177 RMD160 4109b4e201cedb0bf0aefa6feffaab7e366da44d SHA1 67c1ae91608db41fe3bb0aa0eedf60d46a460402 SHA256 23f981745522a1cb82bb6a4f6bb7453218580cdb8d12f05ae28c9c3f714d1318
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+3bEcACgkQX3X2B8XHTom65ACfRjS9y4JCcqegz7oe27ufjszn
+pakAn0dD80cSelOtjd5fH/pNLfUYP3GR
+=Ac1g
+-----END PGP SIGNATURE-----
