@@ -1,33 +1,29 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/jay/jay-1.1.1-r2.ebuild,v 1.4 2009/10/25 21:26:13 volkmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/jay/jay-1.1.1-r2.ebuild,v 1.6 2012/04/06 19:43:33 ssuominen Exp $
 
-EAPI="2"
-
+EAPI=4
 inherit mono java-pkg-opt-2 toolchain-funcs
 
 DESCRIPTION="A LALR(1) parser generator: Berkeley yacc retargeted to C# and Java"
 HOMEPAGE="http://www.cs.rit.edu/~ats/projects/lp/doc/jay/package-summary.html"
-SRC_URI="http://www.cs.rit.edu/~ats/projects/lp/doc/jay/doc-files/src.zip -> ${P}.zip"
+SRC_URI="http://www.cs.rit.edu/~ats/projects/lp/doc/jay/doc-files/src.zip -> ${P}.zip
+	http://dev.gentoo.org/~ssuominen/${P}-mono.snk.bz2"
+
 LICENSE="as-is"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
 IUSE="java mono"
 
-COMMON_DEPEND="
-	!<=dev-lang/mono-2.4
-	mono? ( >dev-lang/mono-2.4 )
-	"
-RDEPEND="
-	${COMMOND_DEPEND}
-	java? (	>=virtual/jre-1.4 )
-	"
-DEPEND="
-	${COMMON_DEPEND}
+COMMON_DEPEND="!<=dev-lang/mono-2.4
+	mono? ( >dev-lang/mono-2.4 )"
+RDEPEND="${COMMOND_DEPEND}
+	java? (	>=virtual/jre-1.4 )"
+DEPEND="${COMMON_DEPEND}
 	java? ( >=virtual/jdk-1.4 )
-	"
+	app-arch/unzip"
 
-S="${WORKDIR}/${PN}"
+S=${WORKDIR}/${PN}
 
 RESTRICT="test"
 
@@ -39,44 +35,41 @@ java_prepare() {
 }
 
 src_prepare() {
-	# Fix up ugly makefiles.
 	sed -i -r \
 		-e "s:^CC\s*=.*:CC = `tc-getCC`:" \
 		-e 's/^jay:.* \$e /\0$(LDFLAGS) /' \
 		-e '/^CFLAGS\s*=/d' \
 		 src/makefile || die
+
 	java-utils-2_src_prepare
 }
 
 src_compile() {
-	emake -C src jay || die "failed to build jay executable"
+	emake -C src jay
+	use java && emake -C yydebug yydebug.jar
 
-	if use java
-	then
-		emake -C yydebug yydebug.jar || die "failed to build yydebug.jar"
-	fi
-
-	if use mono
-	then
-		cd cs
-		"${EPREFIX}"/usr/bin/gmcs /target:library /out:yydebug.dll /keyfile:"${FILESDIR}/mono.snk" yyDebug.cs || die "Failed to compile yyDebug.cs"
+	if use mono; then
+		pushd cs >/dev/null
+		"${EPREFIX}"/usr/bin/gmcs /target:library /out:yydebug.dll /keyfile:"${WORKDIR}"/${P}-mono.snk yyDebug.cs || die
+		popd >/dev/null
 	fi
 }
 
 src_install() {
-	dobin src/jay || die
-	doman jay.1 || die
-	dodoc README || die
-	if use java
-	then
+	dobin src/jay
+
+	doman jay.1
+	dodoc README
+
+	if use java; then
 		java-pkg_dojar yydebug/yydebug.jar
 		insinto /usr/share/jay
-		doins java/skeleton.{java,tables} || die
+		doins java/skeleton.{java,tables}
 	fi
-	if use mono
-	then
+
+	if use mono; then
 		egacinstall cs/yydebug.dll
 		insinto /usr/share/jay
-		doins cs/skeleton.cs || die
+		doins cs/skeleton.cs
 	fi
 }
