@@ -1,6 +1,16 @@
 # ChangeLog for dev-util/jay
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/jay/ChangeLog,v 1.5 2009/10/25 21:26:13 volkmar Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/jay/ChangeLog,v 1.8 2012/04/06 19:43:33 ssuominen Exp $
+
+  06 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> jay-1.1.1-r2.ebuild,
+  -files/mono.snk:
+  Upload binary file mono.snk to mirrors wrt #373253 by Matt Turner
+
+  15 Mar 2012; Ralph Sennhauser <sera@gentoo.org> jay-1.1.1-r2.ebuild:
+  Add missing build dep app-arch/unzip. #372621
+
+  29 Apr 2011; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
+  Invalid herd: mono -> dotnet
 
   25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jay-1.1.1-r2.ebuild:
   Keywording for ppc, bug 270910
